datasource db {
  provider = "mongodb"
  url      = env("DATABASE_URL")
}

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-musl-openssl-3.0.x", "linux-arm64-openssl-3.0.x"]
}

model User {
  id                 String    @id @default(auto()) @map("_id") @db.ObjectId
  name               String?
  email              String    @unique
  emailVerified      DateTime?
  previousEmail      String?
  image              String?
  accounts           Account[]
  sessions           Session[]
  termsAndConditions Boolean   @default(false)
  username           String?   @unique
  role               String?

  // Security fields for account lockout
  failedLoginAttempts Int       @default(0)
  lockedUntil         DateTime?

  // Profile fields
  firstName             String?
  lastName              String?
  phone                 String?
  addressLine1          String?
  addressLine2          String?
  city                  String?
  state                 String?
  zipCode               String?
  country               String?
  allowSmsNotifications Boolean? @default(false)

  // Optional for WebAuthn support
  Authenticator Authenticator[]

  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  // PWYW purchase feature (003-stripe-pwyw-purchase)
  releasePurchases ReleasePurchase[]
  releaseDownloads ReleaseDownload[]

  // Digital formats feature (004-release-digital-formats)
  userDownloadQuotas UserDownloadQuota[]
  downloadEvents     DownloadEvent[]

  // Banner notification feature (006-banner-notification-carousel)
  bannerNotifications BannerNotification[]

  // Live chat feature (009-live-chat)
  chatMessages ChatMessage[]
  chatUsers    ChatUser[]

  // Abuse reporting feature (010-chat-abuse-reporting)
  abuseReportsAgainst     AbuseReport[]    @relation("AbuseReportTarget")
  abuseReportsByReporter  AbuseReport[]    @relation("AbuseReportReporter")
  bannedIdentities        BannedIdentity[]
  hiddenChatMessages      ChatMessage[]    @relation("ChatMessageHiddenByAdmin")
  pinnedChatMessages      ChatMessage[]    @relation("ChatMessagePinnedByAdmin")
  chatUserDisableActions  ChatUser[]       @relation("ChatUserDisabledByAdmin")
  bannedIdentityActions   BannedIdentity[] @relation("BannedIdentityByAdmin")

  // Indexes for performance
  @@index([failedLoginAttempts])
  @@index([lockedUntil])
}

model Account {
  id                String  @id @default(auto()) @map("_id") @db.ObjectId
  userId            String  @db.ObjectId
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.String
  access_token      String? @db.String
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.String
  session_state     String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@index([userId])
  @@index([provider])
}

model Session {
  id           String   @id @default(auto()) @map("_id") @db.ObjectId
  sessionToken String   @unique
  userId       String   @db.ObjectId
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([userId])
  @@index([expires])
}

model VerificationToken {
  id         String   @id @default(auto()) @map("_id") @db.ObjectId
  identifier String
  token      String
  expires    DateTime

  @@unique([identifier, token])
}

// Optional for WebAuthn support
model Authenticator {
  credentialID         String  @id @map("_id")
  userId               String  @db.ObjectId
  providerAccountId    String
  credentialPublicKey  String
  counter              Int
  credentialDeviceType String
  credentialBackedUp   Boolean
  transports           String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, credentialID])
}

model Image {
  id        String   @id @default(auto()) @map("_id") @db.ObjectId
  caption   String?
  artist    Artist?  @relation(fields: [artistId], references: [id])
  artistId  String?  @db.ObjectId
  release   Release? @relation(fields: [releaseId], references: [id])
  releaseId String?  @db.ObjectId
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  src       String?
  altText   String?
  sortOrder Int      @default(0)
  url       Url?     @relation(fields: [urlId], references: [id])
  urlId     String?  @db.ObjectId

  @@index([artistId])
  @@index([releaseId])
  @@index([urlId])
  @@index([sortOrder])
}

enum Platform {
  SPOTIFY
  APPLE_MUSIC
  BANDCAMP
  YOUTUBE
  SOUNDCLOUD
  AMAZON_MUSIC
  FACEBOOK
  TWITTER
  INSTAGRAM
  BLUESKY
  TIKTOK
  WEBSITE
  PATREON
  DISCOGS
}

enum Format {
  DIGITAL
  MP3_320KBPS
  MP3_256KBPS
  MP3_192KBPS
  MP3_128KBPS
  FLAC
  ALAC
  WAV
  AIFF
  AAC
  OGG_VORBIS
  WMA
  CD
  VINYL
  VINYL_7_INCH
  VINYL_10_INCH
  VINYL_12_INCH
  VINYL_180G
  VINYL_COLORED
  VINYL_PICTURE_DISC
  VINYL_GATEFOLD
  VINYL_SPLATTERED
  VINYL_ETCHED
  VINYL_45RPM
  VINYL_33RPM
  VINYL_TRANSPARENT
  VINYL_DOUBLE_LP
  VINYL_TRIPLE_LP
  VINYL_QUAD_LP
  CASSETTE
  VIDEO
  OTHER
}

// Model to store various URLs associated with an artist on various platforms such as Bandcamp, Spotify, Apple Music, etc.
// artistUrlPrefix will be derived from the platform type and combined with the url field to yield the full URL
model Url {
  id          String       @id @default(auto()) @map("_id") @db.ObjectId
  artist      Artist?      @relation(fields: [artistId], references: [id])
  artistId    String?      @db.ObjectId
  release     Release?     @relation(fields: [releaseId], references: [id])
  releaseId   String?      @db.ObjectId
  platform    Platform // Platform.SPOTIFY, Platform.APPLE_MUSIC, etc.
  url         String // TODO: validate that this is a well-formed URL
  images      Image[]
  releaseUrls ReleaseUrl[]

  @@index([artistId])
  @@index([platform])
}

model Genre {
  id        String   @id @default(auto()) @map("_id") @db.ObjectId
  name      String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Label {
  id           String        @id @default(auto()) @map("_id") @db.ObjectId
  name         String        @unique
  signedOn     DateTime?
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  artistLabels ArtistLabel[]
}

model Artist {
  id                    String                 @id @default(auto()) @map("_id") @db.ObjectId
  firstName             String
  middleName            String? // Optional middle name; if stored with commas, split into array on retrieval
  surname               String // aka last name; if stored with commas, split into array on retrieval
  akaNames              String? // aka_name = also known as names; if stored with commas, split into array on retrieval
  displayName           String? // The primary name to display for the artist; Will be derived from other name fields if not provided
  title                 String? // e.g., Dr., Prof., Sir, D.J., M.C.
  suffix                String? // e.g., Jr., Sr., III, PhD
  phone                 String? // internal only; contact phone number; if stored with commas, split into array on retrieval
  email                 String? // internal only; contact email address; if stored with commas, split into array on retrieval
  address1              String? // internal only; street address line 1
  address2              String? // internal only; street address line 2, ie. apartment or suite number
  city                  String? // internal only; city
  state                 String? // internal only; state
  postalCode            String? // internal only; postal code
  country               String? // internal only; country
  bio                   String? // Markdown supported post-MVP, for now just plain text blurb
  shortBio              String? // Ditto md support; A shorter version of the bio for use in thumbnails and listings
  altBio                String? // Ditto md support; An alternative bio for special use cases
  slug                  String                 @unique // Prepopulate or choose a URL-friendly dasherized unique identifier; the artists page will be at /artists/{slug}
  genres                String? // If stored with commas, split into array on retrieval; genres are created in Genre collection, but denormalized here for easy querying
  bornOn                DateTime? // Always feature artist on their birthday if known
  diedOn                DateTime?
  formedOn              DateTime? // Date the band was formed; only used for bands/groups
  publishedOn           DateTime? // Date when the artist was published
  publishedBy           String? // User ID of the admin who published the artist
  createdAt             DateTime               @default(now())
  createdBy             String? // User ID of the admin who created the artist entry
  updatedAt             DateTime?              @updatedAt
  updatedBy             String? // User ID of the admin who last updated the artist entry
  deletedOn             DateTime? // Soft delete timestamp
  deletedBy             String? // User ID of the admin who deleted the artist entry
  deactivatedAt         DateTime? // Date when the artist was deactivated; ie. left the label
  deactivatedBy         String? // User ID of the admin who deactivated the artist entry
  reactivatedAt         DateTime? // Date when the artist was reactivated; ie. re-signed with the label
  reactivatedBy         String? // User ID of the admin who reactivated the artist entry
  notes                 String[] // internal only notes about the artist not meant for public display; markdown support post-MVP
  images                Image[]
  labels                ArtistLabel[] // All labels the artist is/was associated with
  members               ArtistMember[]         @relation("ArtistMembers") // Artists who are members of this band
  memberOf              ArtistMember[]         @relation("MemberOf") // Bands this artist belongs to
  releases              ArtistRelease[] // Releases associated with the artist, including Tracks released
  urls                  Url[] // Various platform URLs associated with the artist
  tags                  String? // If stored with commas, split into array on retrieval; prefer dasherized case tags, ie. "indie-rock", "synth-pop"
  isPseudonymous        Boolean                @default(false) // Don't display real name if true; use first of akaNames or displayName instead in that order
  isActive              Boolean                @default(true) // Whether the artist is currently active; used for filtering in listings
  instruments           String? // If stored with commas, split into array on retrieval; list of instruments the artist plays from primary to occasional
  artistUrls            ArtistUrl[]
  artistFeaturedArtists ArtistFeaturedArtist[]
  featuredArtist        FeaturedArtist?        @relation(fields: [featuredArtistId], references: [id])
  featuredArtistId      String?                @db.ObjectId
  tourHeadliners        TourDateHeadliner[] // Tours where this artist is a headliner

  @@index([isActive])
  @@index([firstName, surname])
  @@index([displayName])
}

model FeaturedArtist {
  id                    String                 @id @default(auto()) @map("_id") @db.ObjectId
  displayName           String? // Override artist's display name when featured; if not provided, use artist's displayName
  featuredOn            DateTime               @default(now())
  featuredUntil         DateTime? // Optional end date for featuring; null = indefinite
  digitalFormat         ReleaseDigitalFormat?  @relation(fields: [digitalFormatId], references: [id])
  digitalFormatId       String?                @db.ObjectId
  createdAt             DateTime               @default(now())
  updatedAt             DateTime               @updatedAt
  publishedOn           DateTime? // Date when the featured artist was published
  position              Int                    @default(0) // Position in the featured artists list; lower numbers appear first
  description           String? // Markdown supported post-MVP; A special description to use when the artist is featured; keep it brief
  coverArt              String? // Optional cover art to use when featuring the artist; if not provided,
  featuredTrackNumber   Int? // 1-based track number to start playback on; null = start at track 1
  release               Release?               @relation(fields: [releaseId], references: [id])
  releaseId             String?                @db.ObjectId
  artists               Artist[]
  artistFeaturedArtists ArtistFeaturedArtist[]

  @@index([featuredOn])
  @@index([featuredUntil])
  @@index([digitalFormatId])
}

model ArtistMember {
  id       String @id @default(auto()) @map("_id") @db.ObjectId
  artist   Artist @relation("ArtistMembers", fields: [artistId], references: [id])
  artistId String @db.ObjectId
  member   Artist @relation("MemberOf", fields: [memberId], references: [id])
  memberId String @db.ObjectId

  @@unique([artistId, memberId])
  @@index([artistId])
  @@index([memberId])
}

model ArtistLabel {
  id       String @id @default(auto()) @map("_id") @db.ObjectId
  artist   Artist @relation(fields: [artistId], references: [id])
  artistId String @db.ObjectId
  label    Label  @relation(fields: [labelId], references: [id])
  labelId  String @db.ObjectId

  @@unique([artistId, labelId])
  @@index([artistId])
  @@index([labelId])
}

model ArtistRelease {
  id        String  @id @default(auto()) @map("_id") @db.ObjectId
  artist    Artist  @relation(fields: [artistId], references: [id])
  artistId  String  @db.ObjectId
  release   Release @relation(fields: [releaseId], references: [id])
  releaseId String  @db.ObjectId

  @@unique([artistId, releaseId])
  @@index([artistId])
  @@index([releaseId])
}

model ArtistFeaturedArtist {
  id               String         @id @default(auto()) @map("_id") @db.ObjectId
  artist           Artist         @relation(fields: [artistId], references: [id])
  artistId         String         @db.ObjectId
  featuredArtist   FeaturedArtist @relation(fields: [featuredArtistId], references: [id])
  featuredArtistId String         @db.ObjectId
}

model ArtistUrl {
  id       String   @id @default(auto()) @map("_id") @db.ObjectId
  artist   Artist   @relation(fields: [artistId], references: [id])
  artistId String   @db.ObjectId
  platform Platform // Platform.SPOTIFY, Platform.APPLE_MUSIC, etc.
  url      String

  @@unique([artistId, platform])
  @@index([artistId])
  @@index([platform])
}

// Add to Tag collection as new tags are created. Remove hash before storing
model Tag {
  id        String    @id @default(auto()) @map("_id") @db.ObjectId
  name      String    @unique
  releases  Release[]
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
}

model Variants {
  id          String   @id @default(auto()) @map("_id") @db.ObjectId
  description String   @unique
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model ReleaseUrl {
  id        String  @id @default(auto()) @map("_id") @db.ObjectId
  release   Release @relation(fields: [releaseId], references: [id])
  releaseId String  @db.ObjectId
  url       Url     @relation(fields: [urlId], references: [id])
  urlId     String  @db.ObjectId

  @@index([releaseId])
}

model Release {
  id                  String           @id @default(auto()) @map("_id") @db.ObjectId
  title               String           @unique
  labels              String[]
  releasedOn          DateTime // Release date sans time component
  catalogNumber       String?
  coverArt            String
  description         String? // Markdown supported post-MVP; A general description of the release for use in various contexts; keep it brief
  downloadUrls        String[]
  formats             Format[] // enum
  extendedData        Json[]
  images              Image[]
  notes               String[]
  executiveProducedBy String[]
  coProducedBy        String[]
  masteredBy          String[]
  mixedBy             String[]
  recordedBy          String[]
  artBy               String[]
  designBy            String[]
  photographyBy       String[]
  linerNotesBy        String[]
  imageTypes          String[]
  variants            String[]
  artistReleases      ArtistRelease[]
  releaseUrls         ReleaseUrl[]
  createdAt           DateTime         @default(now())
  updatedAt           DateTime         @updatedAt
  deletedOn           DateTime? // Date when the release was soft-deleted; null if not deleted
  publishedAt         DateTime? // Date when the release was published
  featuredOn          DateTime? // Date when the release was featured
  featuredUntil       DateTime? // Date when the featured period ends; if not set, release remains featured indefinitely
  featuredDescription String? // A special description to use when the release is featured; keep it brief
  urls                Url[]
  featuredArtists     FeaturedArtist[]
  tag                 Tag?             @relation(fields: [tagId], references: [id])
  tagId               String?          @db.ObjectId

  // PWYW purchase feature (003-stripe-pwyw-purchase)
  suggestedPrice   Int? // Suggested PWYW price in cents (stored as Int, not Decimal - MongoDB limitation); null = no pre-fill
  releasePurchases ReleasePurchase[]
  releaseDownloads ReleaseDownload[]

  // Digital formats feature (004-release-digital-formats)
  digitalFormats ReleaseDigitalFormat[]

  @@index([releasedOn])
  @@index([featuredOn])
  @@index([featuredUntil])
  @@index([deletedOn])
}

model Instrument {
  id        String   @id @default(auto()) @map("_id") @db.ObjectId
  name      String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// Tour Management Models

model Tour {
  id          String      @id @default(auto()) @map("_id") @db.ObjectId
  title       String
  subtitle    String?
  subtitle2   String?
  description String?
  notes       String?
  images      TourImage[]
  tourDates   TourDate[]
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  createdBy   String?     @db.ObjectId
  updatedBy   String?     @db.ObjectId

  @@index([createdAt])
}

model TourDate {
  id            String              @id @default(auto()) @map("_id") @db.ObjectId
  tourId        String              @db.ObjectId
  tour          Tour                @relation(fields: [tourId], references: [id], onDelete: Cascade)
  startDate     DateTime
  endDate       DateTime?
  showStartTime DateTime
  showEndTime   DateTime?
  doorsOpenAt   DateTime?
  venueId       String              @db.ObjectId
  venue         Venue               @relation(fields: [venueId], references: [id], onDelete: Cascade)
  timeZone      String?
  utcOffset     Int?
  ticketsUrl    String?
  ticketIconUrl String?
  ticketPrices  String?
  headliners    TourDateHeadliner[]
  images        TourDateImage[]
  notes         String?
  createdAt     DateTime            @default(now())
  updatedAt     DateTime            @updatedAt

  @@index([tourId])
  @@index([startDate(sort: Desc)])
  @@index([venueId])
}

model Venue {
  id         String     @id @default(auto()) @map("_id") @db.ObjectId
  name       String
  address    String?
  city       String
  state      String?
  postalCode String?
  country    String?
  capacity   Int?
  notes      String?
  timeZone   String?
  createdAt  DateTime   @default(now())
  updatedAt  DateTime   @updatedAt
  createdBy  String?    @db.ObjectId
  updatedBy  String?    @db.ObjectId
  tourDates  TourDate[]

  @@index([name])
  @@index([city, state])
}

model TourDateHeadliner {
  id         String    @id @default(auto()) @map("_id") @db.ObjectId
  tourDateId String    @db.ObjectId
  tourDate   TourDate  @relation(fields: [tourDateId], references: [id], onDelete: Cascade)
  artistId   String?   @db.ObjectId
  artist     Artist?   @relation(fields: [artistId], references: [id], onDelete: Cascade)
  sortOrder  Int       @default(0)
  setTime    DateTime?
  createdAt  DateTime  @default(now())

  @@index([tourDateId])
  @@index([artistId])
}

model TourImage {
  id           String   @id @default(auto()) @map("_id") @db.ObjectId
  tourId       String   @db.ObjectId
  tour         Tour     @relation(fields: [tourId], references: [id], onDelete: Cascade)
  s3Key        String
  s3Url        String
  s3Bucket     String
  fileName     String
  fileSize     Int
  mimeType     String
  displayOrder Int      @default(0)
  altText      String?
  createdAt    DateTime @default(now())
  uploadedBy   String?  @db.ObjectId

  @@index([tourId])
  @@index([displayOrder])
}

model TourDateImage {
  id           String   @id @default(auto()) @map("_id") @db.ObjectId
  tourDateId   String   @db.ObjectId
  tourDate     TourDate @relation(fields: [tourDateId], references: [id], onDelete: Cascade)
  s3Key        String
  s3Url        String
  s3Bucket     String
  fileName     String
  fileSize     Int
  mimeType     String
  displayOrder Int      @default(0)
  altText      String?
  createdAt    DateTime @default(now())
  uploadedBy   String?  @db.ObjectId

  @@index([tourDateId])
  @@index([displayOrder])
}

// PWYW Purchase Feature (003-stripe-pwyw-purchase)

model ReleasePurchase {
  id                      String   @id @default(auto()) @map("_id") @db.ObjectId
  userId                  String   @db.ObjectId
  user                    User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  releaseId               String   @db.ObjectId
  release                 Release  @relation(fields: [releaseId], references: [id], onDelete: Cascade)
  amountPaid              Int // Amount paid in cents
  currency                String   @default("usd")
  stripePaymentIntentId   String   @unique // Idempotency key for webhook deduplication
  stripeSessionId         String?  @unique // Stripe Checkout Session ID — polling key
  confirmationEmailSentAt DateTime? // Atomic guard — non-null = email already dispatched
  refundedAt              DateTime? // Set when charge.refunded webhook fires
  purchasedAt             DateTime @default(now())

  @@unique([userId, releaseId]) // One purchase per user per release
  @@index([userId])
  @@index([releaseId])
}

model ReleaseDownload {
  id               String    @id @default(auto()) @map("_id") @db.ObjectId
  userId           String    @db.ObjectId
  user             User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  releaseId        String    @db.ObjectId
  release          Release   @relation(fields: [releaseId], references: [id], onDelete: Cascade)
  downloadCount    Int       @default(0)
  lastDownloadedAt DateTime?

  @@unique([userId, releaseId]) // One record per user per release
  @@index([userId])
  @@index([releaseId])
}

// Digital Format Management (004-release-digital-formats)

model ReleaseDigitalFormat {
  id            String    @id @default(auto()) @map("_id") @db.ObjectId
  releaseId     String    @db.ObjectId
  release       Release   @relation(fields: [releaseId], references: [id], onDelete: Cascade)
  formatType    String // Enum: MP3_V0, MP3_320KBPS, AAC, OGG_VORBIS, FLAC, ALAC, WAV, AIFF (matches existing Format enumeration)
  s3Key         String? // DEPRECATED: Legacy single-file S3 key (use files relation instead)
  fileName      String? // DEPRECATED: Legacy single-file name (use files relation instead)
  fileSize      BigInt? // DEPRECATED: Legacy single-file size (use totalFileSize instead)
  mimeType      String? // DEPRECATED: Legacy single-file MIME type
  trackCount    Int       @default(0) // Cached count of child track files
  totalFileSize BigInt? // Cached sum of all child file sizes (bytes)
  checksum      String? // MD5 or SHA256 checksum for integrity verification (optional)
  deletedAt     DateTime? // Soft delete timestamp; null = active
  uploadedAt    DateTime  @default(now())
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  files           ReleaseDigitalFormatFile[]
  featuredArtists FeaturedArtist[]

  @@unique([releaseId, formatType]) // One format group per release
  @@index([releaseId])
  @@index([s3Key])
  @@index([deletedAt]) // For soft delete queries
}

model ReleaseDigitalFormatFile {
  id          String               @id @default(auto()) @map("_id") @db.ObjectId
  formatId    String               @db.ObjectId
  format      ReleaseDigitalFormat @relation(fields: [formatId], references: [id], onDelete: Cascade)
  trackNumber Int // 1-based track ordering (derived from filename sort)
  title       String? // Track title for display (fallback: fileName)
  duration    Int? // Duration in seconds
  s3Key       String // S3 object key for this track file
  fileName    String // Original uploaded filename (e.g., "01 - Intro.mp3")
  fileSize    BigInt // File size in bytes
  mimeType    String // MIME type (e.g., "audio/mpeg")
  checksum    String? // Optional SHA-256 hash for integrity verification
  uploadedAt  DateTime             @default(now())
  createdAt   DateTime             @default(now())
  updatedAt   DateTime             @updatedAt

  @@unique([formatId, trackNumber]) // No duplicate track numbers within a format
  @@index([formatId])
  @@index([s3Key])
}

model UserDownloadQuota {
  id               String   @id @default(auto()) @map("_id") @db.ObjectId
  // Exactly one of (userId, visitorId) is set per row.
  // userId: authenticated freemium quota holder
  // visitorId: anonymous guest identified by the boudreaux_visitor_id cookie (UUIDv7)
  // Feature: 007-free-digital-downloads
  userId           String?  @unique @db.ObjectId
  user             User?    @relation(fields: [userId], references: [id], onDelete: Cascade)
  visitorId        String?  @unique
  uniqueReleaseIds String[] // Array of release ObjectId strings downloaded for free (max 5)
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt
}

// Per-(visitorId, releaseId) download counter used to enforce
// MAX_RELEASE_DOWNLOAD_COUNT for anonymous guests with a 6-hour reset window.
// Mirrors the per-release cap that PurchaseAccess provides for authenticated users
// and paid guests, but for the free anonymous flow.
// Feature: 007-free-digital-downloads
model GuestDownloadCount {
  id             String   @id @default(auto()) @map("_id") @db.ObjectId
  visitorId      String
  releaseId      String   @db.ObjectId
  downloadCount  Int      @default(0)
  lastDownloadAt DateTime @default(now())
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  @@unique([visitorId, releaseId])
  @@index([visitorId])
  @@index([releaseId])
  @@index([lastDownloadAt])
}

model DownloadEvent {
  id           String   @id @default(auto()) @map("_id") @db.ObjectId
  userId       String?  @db.ObjectId // Nullable for guest downloads
  user         User?    @relation(fields: [userId], references: [id], onDelete: SetNull)
  visitorId    String? // boudreaux_visitor_id cookie value for anonymous downloads (007-free-digital-downloads)
  releaseId    String   @db.ObjectId
  formatType   String // Format downloaded (e.g., MP3_320KBPS, FLAC)
  success      Boolean // true = download succeeded, false = failed (quota exceeded, auth error, etc.)
  errorCode    String? // Optional error code for failed downloads (e.g., QUOTA_EXCEEDED, NOT_PURCHASED)
  ipAddress    String? // IP address for security audit (optional, privacy-sensitive)
  userAgent    String? // User agent string (optional, for analytics)
  downloadedAt DateTime @default(now())
  createdAt    DateTime @default(now())

  @@index([userId])
  @@index([visitorId])
  @@index([releaseId])
  @@index([downloadedAt]) // For time-based analytics queries
  @@index([userId, releaseId]) // For per-user per-release download history
  @@index([visitorId, releaseId, downloadedAt]) // Free-flow rolling-window cap query (007-free-digital-downloads)
}

// Composite-identity record for anonymous visitors (007-free-digital-downloads).
// Maps the long-lived first-party cookie value (visitorId) to a server-derived
// fingerprint hash so that the per-release rolling-window cap survives cookie clears.
model VisitorIdentity {
  id              String   @id @default(auto()) @map("_id") @db.ObjectId
  // Canonical anonymous identifier — same value as the boudreaux_visitor_id cookie.
  visitorId       String   @unique
  // SHA-256(UA | Accept-Language | IP /24) hex digest. Indexed for cookie-recovery lookups.
  fingerprintHash String
  firstSeenAt     DateTime @default(now())
  lastSeenAt      DateTime @default(now())
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  @@index([fingerprintHash])
  @@index([lastSeenAt])
}

// Banner Notification Carousel (006-banner-notification-carousel)

model BannerNotification {
  id              String    @id @default(auto()) @map("_id") @db.ObjectId
  slotNumber      Int       @unique // Banner slot (1–5)
  content         String? // Notification text overlay
  textColor       String? // Hex color for text
  backgroundColor String? // Hex color for badge/background
  displayFrom     DateTime? // Start of display window
  displayUntil    DateTime? // End of display window
  repostedFromId  String?   @db.ObjectId // Source notification ID for reposts
  addedBy         User      @relation(fields: [addedById], references: [id], onDelete: Cascade)
  addedById       String    @db.ObjectId
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt

  @@index([addedById])
  @@index([displayFrom])
  @@index([displayUntil])
}

model SiteSettings {
  id        String   @id @default(auto()) @map("_id") @db.ObjectId
  key       String   @unique // Setting key (e.g., "carousel-rotation-interval")
  value     String // Setting value
  updatedAt DateTime @updatedAt
}

// Live Chat (009-live-chat)

model ChatMessage {
  id        String   @id @default(auto()) @map("_id") @db.ObjectId
  userId    String   @db.ObjectId
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  body      String
  reactions Json     @default("[]") // { emoji: string; userIds: string[] }[]
  createdAt DateTime @default(now())

  // Abuse reporting (010-chat-abuse-reporting). `hiddenReason` distinguishes
  // hides caused by the author being disabled ("user_disabled") from hides
  // applied per-message by an admin ("admin_flagged"). Only "user_disabled"
  // hides clear automatically when the author is re-enabled.
  hiddenAt        DateTime?
  hiddenByAdminId String?   @db.ObjectId
  hiddenByAdmin   User?     @relation("ChatMessageHiddenByAdmin", fields: [hiddenByAdminId], references: [id])
  hiddenReason    String? // "user_disabled" | "admin_flagged"

  // Admin-pinned announcements. Up to 3 messages can be pinned at once;
  // the limit is enforced in the action layer. `pinnedAt` is the time the
  // admin clicked pin (used to order the pinned strip); a null/absent
  // value means the message is in the regular chat stream.
  pinnedAt        DateTime?
  pinnedByAdminId String?   @db.ObjectId
  pinnedByAdmin   User?     @relation("ChatMessagePinnedByAdmin", fields: [pinnedByAdminId], references: [id])

  @@index([createdAt(sort: Desc)])
  @@index([userId])
  @@index([hiddenAt])
  @@index([pinnedAt])
}

model ChatUser {
  id           String   @id @default(auto()) @map("_id") @db.ObjectId
  userId       String   @unique @db.ObjectId
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  fingerprint  String
  ipAddress    String
  messageCount Int      @default(0)
  flagged      Boolean  @default(false)
  disabled     Boolean  @default(false)
  lastSeenAt   DateTime @updatedAt
  createdAt    DateTime @default(now())

  // Abuse reporting (010-chat-abuse-reporting). Captures the admin who
  // disabled the user and when, for audit + per-message re-enable logic.
  disabledAt      DateTime?
  disabledByAdminId String? @db.ObjectId
  disabledByAdmin User?     @relation("ChatUserDisabledByAdmin", fields: [disabledByAdminId], references: [id])
  disabledReason  String?

  @@index([flagged])
  @@index([disabled])
}

// Abuse reporting feature (010-chat-abuse-reporting).
//
// Anonymous-to-admins but identified-to-system: `reporterId` and
// `reporterFingerprint` are recorded for rate limiting + audit and must
// NEVER be exposed in admin UI, emails, SMS, or API responses.
model AbuseReport {
  id                  String   @id @default(auto()) @map("_id") @db.ObjectId
  reportedUserId      String   @db.ObjectId
  reportedUser        User     @relation("AbuseReportTarget", fields: [reportedUserId], references: [id], onDelete: Cascade)
  reporterId          String   @db.ObjectId
  reporter            User     @relation("AbuseReportReporter", fields: [reporterId], references: [id], onDelete: Cascade)
  reporterFingerprint String? // server-side hash from visitor-fingerprint.ts
  createdAt           DateTime @default(now())

  @@index([reporterId, reportedUserId, createdAt])
  @@index([reportedUserId, createdAt])
  @@index([createdAt])
}

// Active ban records used by the disabled-user UX + signup/login gate.
// `email` is stored lowercased. `fingerprintHash` is the SHA-256 produced
// by visitor-fingerprint.ts (UA + Accept-Language + IP /24).
model BannedIdentity {
  id              String    @id @default(auto()) @map("_id") @db.ObjectId
  userId          String?   @db.ObjectId
  user            User?     @relation(fields: [userId], references: [id])
  email           String
  fingerprintHash String?
  bannedByAdminId String    @db.ObjectId
  bannedByAdmin   User      @relation("BannedIdentityByAdmin", fields: [bannedByAdminId], references: [id])
  bannedAt        DateTime  @default(now())
  unbannedAt      DateTime?
  reason          String?

  @@index([email])
  @@index([fingerprintHash])
  @@index([userId])
}

model ChatRateLimitLog {
  id          String   @id @default(auto()) @map("_id") @db.ObjectId
  fingerprint String
  ipAddress   String
  attemptedAt DateTime @default(now())

  @@index([attemptedAt])
  @@index([fingerprint])
}
