%% Data model — Events (tours) & Community (chat / moderation)
erDiagram
    Tour ||--o{ TourDate : "schedules"
    Venue ||--o{ TourDate : "hosts"
    TourDate ||--o{ TourDateHeadliner : "features"
    Artist ||--o{ TourDateHeadliner : "headlines"
    User ||--o{ ChatMessage : "posts"
    User ||--o| ChatUser : "chat profile"
    User ||--o{ AbuseReport : "reports"
    User ||--o{ BannedIdentity : "banned as"

    Tour {
        string id PK
        string title
        string subtitle
    }
    TourDate {
        string id PK
        datetime startDate
        datetime showStartTime
        string ticketsUrl
    }
    Venue {
        string id PK
        string name
        string city
        string timeZone
    }
    TourDateHeadliner {
        string id PK
        string tourDateId FK
        string artistId FK
    }
    ChatMessage {
        string id PK
        string body
        json reactions
        datetime hiddenAt
        datetime pinnedAt
    }
    ChatUser {
        string id PK
        boolean disabled
        boolean flagged
        int messageCount
    }
    AbuseReport {
        string id PK
        string reportedUserId FK
        string reporterId FK
    }
    BannedIdentity {
        string id PK
        string email
        string fingerprintHash
        datetime unbannedAt
    }
